--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="CHANGE THIS">
-    <title>React component starter</title>
+    <link
+            rel="stylesheet" type="text/css" href="https://local.fishingbooker.com:1443/css/all.css">
+    <title>Title</title>
 </head>
-
 <body>
 <div id="app"></div>
-<script type="text/javascript" src="bundle.js"></script></body>
-
+</body>
 </html>
